@@ -387,6 +387,7 @@ final class CheckerFrameworkPlugin implements Plugin<Project> {
                     "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
                     "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
                     "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+                    "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
                     "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
                     "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
                     "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
